<resources>
    <string name="app_name">EligeTuPropiaAventuraApp</string>
    <string name="elige_tu_aventura">Elige tu Aventura!</string>
    <string name="inicia_tu_viaje">Inicia tu viaje</string>
    <string name="imagen_de_fondo">Imagen de fondo</string>
    <string name="titulo">titulo</string>
    <string name="boton_jugar">boton-jugar</string>
    <string name="crea_tu_aventura">Crea tu aventura</string>
    <string name="elige_hasta_dos_atributos">Elige hasta dos atributos:</string>
    <string name="fuerza">Fuerza</string>
    <string name="destreza">Destreza</string>
    <string name="inteligencia">Inteligencia</string>
    <string name="comenzar_aventura">Comenzar aventura</string>
    <string name="nombre_del_personaje">Nombre del personaje</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="otro">Otro</string>
    <string name="modo_dif_cil">Modo difícil</string>
    <string name="magia">Magia</string>
<<<<<<< HEAD
    <string name="label_include_details">Incluir detalles adicionales</string>
    <string name="prompt_aventura">Crea una aventura para un personaje llamado %1$s, género %2$s, en un mundo de %3$s, dificultad %4$s, con los atributos: %5$s. Que sea de 40 palabras.</string>
    <string name="volver_al_formulario">Volver</string>

=======
    <string name="regresar">Regresar</string>
>>>>>>> 7128fecb4f05ebfd193e4be729d27d437969bca6
</resources>