<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="#FFF"
    android:padding="0dp"
    android:visibility="visible"
    tools:context=".FormActivity"
    app:srcCompat="@drawable/fondo_form">

    <!-- Título de la aplicación -->

    <!-- Selector de dificultad (Switch) -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:contentDescription="@string/imagen_de_fondo"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondo_form"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tituloForm"
        android:layout_width="317dp"
        android:layout_height="27dp"
        android:layout_marginTop="44dp"
        android:text="@string/crea_tu_aventura"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dificultad"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/dificultad"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:text="@string/modo_dif_cil"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nombreForm"
        app:layout_constraintTop_toBottomOf="@id/tituloForm" />

    <!-- Campo para nombre del personaje -->

    <!-- Selección de género literario -->
    <EditText
        android:id="@+id/nombreForm"
        android:layout_width="379dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/nombre_del_personaje"
        android:inputType="textLongMessage"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dificultad" />



    <!-- Atributos destacados (CheckBox, máximo 2) -->

    <Spinner
        android:id="@+id/tipoFiccion"
        android:layout_width="310dp"
        android:layout_height="67dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreForm"
        android:textColor="@color/white"
        />

    <!-- Selección de género del personaje -->
    <RadioGroup
        android:id="@+id/generoForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipoFiccion"
        app:layout_constraintVertical_chainStyle="spread">

        <RadioButton
            android:id="@+id/masculino"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/otro"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:text="@string/otro"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/femenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/atributosLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/elige_hasta_dos_atributos"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generoForm"
        />
    constraintlayout
    <CheckBox
        android:id="@+id/checkboxDestreza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/destreza"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/checkboxFuerza"
        app:layout_constraintTop_toBottomOf="@id/atributosLabel"
        app:layout_constraintVertical_chainStyle="spread"/>

    <CheckBox
        android:id="@+id/checkboxFuerza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:text="@string/fuerza"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/atributosLabel" />

    <!-- Botón de lanzamiento -->
    <CheckBox
        android:id="@+id/checkboxMagia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/magia"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/checkboxInteligencia"
        app:layout_constraintTop_toBottomOf="@id/checkboxDestreza" />

    <CheckBox
        android:id="@+id/checkboxInteligencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:text="@string/inteligencia"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkboxFuerza" />

    <!-- Progreso de carga de IA -->

    <Button
        android:id="@+id/startButton"
        android:layout_width="348dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/comenzar_aventura"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkboxInteligencia" />

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
