<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/fondo"
        android:contentDescription="@string/imagen_de_fondo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/text_id"
        android:text="@string/elige_tu_aventura"
        android:textColor="@color/orange"
        android:textSize="20sp"
        />

    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_id"
        android:text="@string/inicia_tu_viaje"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/orange"
        />


<!--
    <Button
        android:id="@+id/btnIrAlFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ir al formulario"
        app:layout_constraintTop_toBottomOf="@id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>-->



</androidx.constraintlayout.widget.ConstraintLayout>